test/expected/explain_ro_exclam_k_b.out
explain bool operator!(S) &
           ^
12: error: member operator ! must have exactly 0 parameters
